# desktop-client-practice

./: README.md
AndroidStudio/AndroidStudio Projects/AttandanceAPP/: table_title_info.txt
AndroidStudio/AndroidStudio Projects/CoronaSearchApp/: settings.gradle
AndroidStudio/AndroidStudio_Projects/CoronaSearchApp/: README.md
Cef/: How to build CEF on Windows 10.txt  README.md
Cef/CEF_Projects/CEF_Multiprocess/: CEF_multiprocess.sln
Cef/CEF_Projects/cefsimple/: cefsimple.sln
Gtk/: Use Gtkmm with Visual Studio in Windows 10.txt  Using GTK4 on Windows.md
Gtk/Gtk4.Sample/: CMakeLists.txt  main.cpp  vcpkg.json
MFC/UsingWebView2DialogThroughDLL/: .gitignore  ReadMe.md
MFC/UsingWebView2DialogThroughDLL/WebViewDLL/: ComponentBase.h  ViewComponent.cpp  ViewComponent.h  WebViewDLL.aps  WebViewDLL.cpp  WebViewDLL.def  WebViewDLL.h  WebViewDLL.rc  WebViewDLL.vcxproj  WebViewDLL.vcxproj.filters  WebViewDialog.cpp  WebViewDialog.h  packages.config  resource.h  vcpkg.json
MFC/UsingWebView2DialogThroughDLL/WebViewProject/: WebViewProject.aps  WebViewProject.cpp  WebViewProject.h  WebViewProject.rc  WebViewProject.sln  WebViewProject.vcxproj  WebViewProject.vcxproj.filters  WebViewProjectDlg.cpp  WebViewProjectDlg.h  resource.h
Qt/: Build QT with VS Code, MSVC Compiler.md  Build Qt on VS Code.md  QML Note.md  QML_메모.txt  Qt 메모.txt  Qt_메모.txt
Qt/Messenger_Demo/: messanger_spec.txt
Qt/Messenger_Demo/Messenger/: .gitignore  CMakeLists.txt  LoginPageContext.cpp  LoginPageContext.hpp  TCPClient.cpp  TCPClient.hpp  WinQuickWindow.cpp  main.cpp  qml.qrc  vcpkg.json
Qt/Messenger_Demo/Messenger_Client/: CMakeLists.txt  CMakePresets.json  ChatBubbleEnum.cpp  ChatBubbleEnum.hpp  LoginPageContext.cpp  LoginPageContext.hpp  MainPageContext.cpp  MainPageContext.hpp  MessengerService.cpp  MessengerService.hpp  NetworkDefinition.hpp  Service.cpp  Service.hpp  TCPClient.cpp  TCPClient.hpp  TCPServer.cpp  TCPServer.hpp  Utility.hpp  WinQuickWindow.cpp  WinQuickWindow.hpp  main.cpp  qml.qrc  vcpkg.json
Qt/Messenger_Demo/Messenger_Server/: CMakeLists.txt  CMakePresets.json  DBConnectionPool.cpp  DBConnectionPool.hpp  MessengerService.cpp  MessengerService.hpp  NetworkDefinition.hpp  Service.hpp  TCPClient.cpp  TCPClient.hpp  TCPServer.cpp  TCPServer.hpp  Utility.hpp  main.cpp  vcpkg.json
Qt/Messenger_Demo/Test_Datas/: DB Initialize.txt
Qt/Qt Projects/: .gitignore
Qt/Qt Projects/BorderLessWindow_QML/: main.cpp
Qt/Qt Projects/BorderlessApp/: BorderlessWindow.cpp  BorderlessWindow.hpp  CMakeLists.txt  main.cpp
Qt/Qt Projects/BorderlessWindow/: CMakeLists.txt
Qt/Qt Projects/BorderlessWindow.QML/: main.qml
Qt/Qt Projects/BorderlessWindowWithMenu/: CMakeLists.txt  custommenubar.cpp  qwinwidget.cpp  resources.qrc  widget.cpp  widget.h
Qt/Qt Projects/CustomQtQuickButton/: CMakeLists.txt  CMakePresets.json  main.cpp  qml.qrc
Qt/Qt Projects/CustomTableModel/: CMakeLists.txt  CustomTableModel.cpp  CustomTableModel.hpp  MainWidget.cpp  MainWidget.ui
Qt/Qt Projects/EventFilter/: ButtonEventFilter.cpp  ButtonEventFilter.hpp  CMakeLists.txt  EventFilter.cpp  EventFilter.hpp  MainWidget.cpp  MainWidget.hpp  MainWidget.ui  main.cpp
Qt/Qt Projects/FrameLessQtQuick/: CMakeLists.txt  WinQuickWindow.cpp  WinQuickWindow.hpp  main.cpp
Qt/Qt Projects/FrameLessQtQuick/Qmls/: main.qml
Qt/Qt Projects/FrameLessQtWidget/: CMakeLists.txt  MainWindow.hpp  main.cpp  mainwindow.cpp  mainwindow.h
Qt/Qt Projects/FrameLessWindow/: WinQuickWindow.cpp  WinQuickWindow.hpp  main.cpp
Qt/Qt Projects/FrameLessWindowQtQuick/: CMakeLists.txt  WinNativeWindow.cpp  WinNativeWindow.hpp  WinQuickWIndow.cpp  WinQuickWindow.hpp  main.cpp
Qt/Qt Projects/FrameLessWindowQtWidgets/: CMakeLists.txt  qwinwidget.cpp  qwinwidget.h  resources.qrc  widget.cpp  widget.h  winnativewindow.cpp
Qt/Qt Projects/FrameLessWindowWithMenuBar/: CMakeLists.txt  custommenubar.cpp  custommenubar.hpp  customtitlebar.cpp  customtitlebar.hpp  qwinwidget.cpp  qwinwidget.h  resources.qrc  widget.cpp  widget.h  winnativewindow.cpp
Qt/Qt Projects/FrameLessWindowWithQGoodWindow/: CMakeLists.txt  main.cpp
Qt/Qt Projects/FrameLessWindowWithQGoodWindow/Libraries/QGoodCentralWidget/: QGoodCentralWidget.cmake
Qt/Qt Projects/FrameLessWindowWithQGoodWindow/Libraries/QGoodCentralWidget/src/: captionbutton.cpp  captionbutton.h  iconwidget.h  qgoodcentralwidget.cpp  qgoodcentralwidget.h  titlebar.cpp  titlebar.h  titlewidget.cpp  titlewidget.h
Qt/Qt Projects/FrameLessWindowWithQGoodWindow/Libraries/QGoodWindow/: QGoodWindow.cmake
Qt/Qt Projects/FrameLessWindowWithQGoodWindow/Libraries/QGoodWindow/src/: macosnative.h  macosnative.mm  qgooddialog.cpp  qgoodstateholder.cpp  qgoodstateholder.h  qgoodwindow.cpp  qgoodwindow.h  shadow.cpp  shadow.h
Qt/Qt Projects/FrameLessWindowWithQGoodWindow/Libraries/QGoodWindow/version/: version.h
Qt/Qt Projects/HtmlRequest/: CMakeLists.txt  MainWidget.cpp  MainWidget.hpp  MainWidget.ui
Qt/Qt Projects/MouseDragInQtQuick/: CMakeLists.txt
Qt/Qt Projects/MouseDragInQtQuick/QmlDir/: main.qml
Qt/Qt Projects/OverrideEvent/: CMakeLists.txt  CustomButton.cpp  CustomButton.hpp  MainWidget.cpp  MainWidget.hpp  MainWidget.ui  main.cpp
Qt/Qt Projects/PostandSendEvent/: CMakeLists.txt  MainWidget.cpp  MainWidget.hpp  MainWidget.ui
Qt/Qt Projects/QtBorderLessWindow/: CMakeLists.txt  main.cpp  qwinwidget.cpp  widget.h  winnativewindow.cpp
Qt/Qt Projects/QtBorderlessToolBar/: CMakeLists.txt  qwinwidget.cpp  qwinwidget.h  widget.cpp  widget.h  winnativewindow.cpp
Qt/Qt Projects/QtQMLPractice/: CMakeLists.txt  main.cpp  qml.qrc
Qt/Qt Projects/QtWidgetBorderLessWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  QMainPanel.cpp  QMainPanel.hpp  QWinHost.cpp  QWinHost.hpp  QWinWidget.cpp  QWinWidget.hpp  main.cpp
Qt/QtQuick.Project/: CMakeLists.txt  main.cpp
Qt/QtQuick.Project/QmlDir/: main.qml
Qt/QtWidget.Project/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Temp_Test/: main.qml
WinAPI/Tetris_Using_WinAPI/: Tetris.lnk  Tetris.sln  Tetris_tongstar.txt
(+251 files in other folders)
